--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation "androidx.compose.animation:animation:$compose_version"
     implementation "androidx.ui:ui-tooling:$compose_version"
 
+    implementation 'com.squareup.radiography:radiography:2.0.0'
+    implementation("androidx.ui:ui-tooling:1.0.0-alphaXY")
+
     implementation('androidx.appcompat:appcompat:1.2.0')
     implementation('androidx.activity:activity-ktx:1.1.0')
     implementation "androidx.core:core-ktx:1.3.1"
